# ModelePublication

./: CMakeLists.txt  CMakeLists.txt.user.12b14ce  CMakeLists.txt.user.e1eb6d2  ModelePublicationn.files  ModelePublicationn.includes  README.md  accueil.cpp  accueil.h  accueil.ui  clientwindow.cpp  clientwindow.h  clientwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  places.txt  ressources.qrc  style.qss
include/: Publication.hpp  Ressource.hpp
src/: Publication.cpp  Ressource.cpp
